--- a/k8s/configmaps/postgresql-config-apps.yaml
+++ b/k8s/configmaps/postgresql-config-apps.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: postgresql-config
+  name: postgresql-config-apps
   namespace: apps
 data:
   DB_HOST: "postgresql.database.svc.cluster.local"
