--- a/k8s/configmaps/rabbitmq-config-apps.yaml
+++ b/k8s/configmaps/rabbitmq-config-apps.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: rabbitmq-config
+  name: rabbitmq-config-apps
   namespace: apps
 data:
   RABBITMQ_HOST: "rabbitmq.messaging.svc.cluster.local"
   RABBITMQ_PORT: "5672"
-  QUEUE_NAME: "demo-queue"
+  RABBITMQ_VHOST: "/order"
