--- a/payment-service/Dockerfile
+++ b/payment-service/Dockerfile
@@ -1,10 +1,21 @@
-FROM node:22-alpine
+FROM node:22-alpine AS builder
 
-WORKDIR /app
+WORKDIR /usr/src/app
 
 COPY package*.json ./
-RUN npm install --omit=dev
+RUN npm ci --omit=dev || npm install --only=production
 
-COPY . .
+FROM node:22-alpine AS runner
 
-CMD ["npm", "start"]
+WORKDIR /usr/src/app
+ENV NODE_ENV=production
+
+COPY --from=builder /usr/src/app/node_modules ./node_modules
+
+COPY package*.json ./
+COPY index.js ./
+COPY lib ./lib
+
+USER node
+
+CMD ["node", "index.js"]
