Adding corrected values + container init for the payment service + correcting the configmap Vhost

--- a/k8s/charts/payment-service-chart/templates/deployment.yaml
+++ b/k8s/charts/payment-service-chart/templates/deployment.yaml
@@ -14,6 +14,10 @@ spec:
       labels:
         {{- include "payment-service-chart.selectorLabels" . | nindent 8 }}
     spec:
+      {{- with .Values.initContainers }}
+      initContainers:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
       containers:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
