--- a/k8s/values/dev/rabbitmq.yaml
+++ b/k8s/values/dev/rabbitmq.yaml
@@ -18,7 +18,7 @@ auth:
   existingErlangSecret: rabbitmq-credentials-messaging
   existingSecretPasswordKey: password
   existingSecretErlangCookieKey: erlang-cookie
-
+  vhost: "/"
 replicaCount: 1
 
 persistence:
