Adding Payment service appoval/reject + README.md File Organized + Rename the SVC Using Overridename

--- a/k8s/charts/order-api-chart/templates/service.yaml
+++ b/k8s/charts/order-api-chart/templates/service.yaml
@@ -11,4 +11,4 @@ spec:
   ports:
     - name: http
       port: {{ .Values.service.port }}
-      targetPort: 8080
+      targetPort: {{ .Values.service.port }}
