--- a/k8s/charts/payment-service-chart/templates/deployment.yaml
+++ b/k8s/charts/payment-service-chart/templates/deployment.yaml
@@ -22,6 +22,10 @@ spec:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          ports:
+            - name: http
+              containerPort: {{ .Values.service.port }}
+              protocol: TCP
           env:
             - name: SERVICE_NAME
               value: "payment-service"
