--- a/k8s/secrets/postgresql-credentials-apps.yaml
+++ b/k8s/secrets/postgresql-credentials-apps.yaml
@@ -5,5 +5,7 @@ metadata:
   namespace: apps
 type: Opaque
 stringData:
+  DB_USER: "postgresdb"
+  DB_PASSWORD: "postgresqlpassword"
   postgresPassword: "postgresqlpassword"
   password: "postgresqlpassword"
