--- a/k8s/charts/payment-service-chart/values.yaml
+++ b/k8s/charts/payment-service-chart/values.yaml
@@ -5,6 +5,8 @@ image:
   tag: "v1"
   pullPolicy: IfNotPresent
 
+fullnameOverride: payment-service
+
 resources: {}
 
 nodeSelector: {}
@@ -12,6 +14,26 @@ tolerations: []
 affinity: {}
 
 service:
-  enabled: false
+  enabled: true
   type: ClusterIP
-  port: 8080
+  port: 8081
+
+
+initContainers:
+- name: wait-for-rabbitmq
+  image: busybox:1.36
+  command:
+    - /bin/sh
+    - -c
+    - |
+      echo "Waiting for RabbitMQ at ${RABBITMQ_HOST}:${RABBITMQ_PORT}..."
+      while ! nc -z "${RABBITMQ_HOST}" "${RABBITMQ_PORT}"; do
+        echo "RabbitMQ not ready yet, sleeping..."
+        sleep 3
+      done
+      echo "RabbitMQ is up, starting payment-service."
+  envFrom:
+    - configMapRef:
+        name: rabbitmq-config-apps
+    - secretRef:
+        name: rabbitmq-credentials-apps
