--- a/payment-service/package.json
+++ b/payment-service/package.json
@@ -6,8 +6,10 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "amqplib": "^0.10.0",
-    "dotenv": "^16.0.0",
-    "pg": "^8.12.0"
+    "express": "^4.18.2",
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.4.0",
+    "pg": "^8.11.0",
+    "amqplib": "^0.10.3"
   }
 }
