--- a/k8s/secrets/example-postgresql-credentials-apps.yaml
+++ b/k8s/secrets/example-postgresql-credentials-apps.yaml
@@ -1,12 +1,11 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: postgresql-credentials
+  name: postgresql-credentials-apps
   namespace: apps
 type: Opaque
 stringData:
-  # admin user = postgres
-  postgres-username: "postgresdb"
-  postgres-password: "postgresqlpassword"
-  # app user = postgresdb
+  DB_USER: "postgresdb"
+  DB_PASSWORD: "postgresqlpassword"
+  postgresPassword: "postgresqlpassword"
   password: "postgresqlpassword"
