--- a/k8s/secrets/example-rabbitmq-credentials-apps.yaml
+++ b/k8s/secrets/example-rabbitmq-credentials-apps.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: rabbitmq-credentials
+  name: rabbitmq-credentials-apps
   namespace: apps
 type: Opaque
 stringData:
-  username: admin
-  password: "adminpassword"
-  erlang-cookie: "supersecretcookie"
+  RABBITMQ_USERNAME: "admin"
+  RABBITMQ_PASSWORD: "adminpassword"
+  RABBITMQ_ERLANG_COOKIE: "supersecretcookie"
