--- a/k8s/secrets/example-rabbitmq-credentials-messaging.yaml
+++ b/k8s/secrets/example-rabbitmq-credentials-messaging.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: rabbitmq-credentials
+  name: rabbitmq-credentials-messaging
   namespace: messaging
 type: Opaque
 stringData:
