--- a/k8s/configmaps/grafana-config.yaml
+++ b/k8s/configmaps/grafana-config.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: rabbitmq-ordering-platform-dashboard
+  name: ordering-platform-dashboard
   namespace: monitoring
   labels:
     grafana_dashboard: "1"
@@ -808,7 +808,7 @@ data:
       },
       "timepicker": {},
       "timezone": "browser",
-      "title": "Total Application Information",
+      "title": "K8s & Platform Overview",
       "uid": "adkvsv9",
       "version": 22
     }
