In progress Postgres Exporter

--- a/k8s/values/dev/kube-prom-stack.yaml
+++ b/k8s/values/dev/kube-prom-stack.yaml
@@ -83,6 +83,10 @@ kube-state-metrics:
       memory: 256Mi
 
 prometheus-node-exporter:
+  enabled: true
+  prometheus:
+    monitor:
+      enabled: true
   resources:
     requests:
       cpu: 30m
@@ -90,5 +94,6 @@ prometheus-node-exporter:
     limits:
       cpu: 100m
       memory: 128Mi
+
 
 
