--- a/k8s/values/dev/postgresql.yaml
+++ b/k8s/values/dev/postgresql.yaml
@@ -14,8 +14,11 @@ auth:
 primary:
 
   persistence:
-    enabled: false
-
+    enabled: true
+    type: pvc
+    size: 2Gi
+    storageClassName: local-path
+    
   resources:
     requests:
       cpu: 50m
