--- a/k8s/values/dev/kube-prom-stack.yaml
+++ b/k8s/values/dev/kube-prom-stack.yaml
@@ -99,10 +99,14 @@ grafana:
     dashboards:
       enabled: true
       label: grafana_dashboard
-      labelValue: "1" #specific the dashboard
-      searchNamespace: "monitoring"
-    datasources:
-      enabled: true
+      labelValue: "1"
+      searchNamespace: "ALL"
+
+      updateIntervalSeconds: 10
+      folderAnnotation: grafana_folder
+      provider:
+        allowUiUpdates: true
+        foldersFromFilesStructure: true
 
 # Node exporter / kube-state-metrics resources
 kube-state-metrics:
