--- a/app/order-api/Dockerfile
+++ b/app/order-api/Dockerfile
@@ -1,23 +1,23 @@
-# ===== Builder stage =====
-FROM node:22-alpine AS builder
-
+FROM node:22-trixie-slim AS deps
 WORKDIR /usr/src/app
 
+# Install only production dependencies in a clean, repeatable way
 COPY package*.json ./
-RUN npm ci --omit=dev || npm install --only=production
+RUN npm ci --omit=dev
 
-# ===== Runtime stage =====
-FROM node:22-alpine AS runner
-
+# ===== runtime stage (small, production image) =====
+FROM node:22-trixie-slim AS runner
 WORKDIR /usr/src/app
 ENV NODE_ENV=production
 
-COPY --from=builder /usr/src/app/node_modules ./node_modules
+# Copy deps from deps stage
+COPY --from=deps /usr/src/app/node_modules ./node_modules
 
+# Copy app source
 COPY package*.json ./
 COPY index.js ./
 COPY lib ./lib
 
+# Run as non-root (node user exists in the official image)
 USER node
-
 CMD ["node", "index.js"]
