--- a/k8s/charts/payment-service-chart/templates/deployment.yaml
+++ b/k8s/charts/payment-service-chart/templates/deployment.yaml
@@ -40,6 +40,8 @@ spec:
                 name: rabbitmq-config-apps
             - configMapRef:
                 name: postgresql-config-apps
+            - configMapRef:
+                name: payment-service-config
             - secretRef:
                 name: rabbitmq-credentials-apps
             - secretRef:
