adding digest + CI Organized when pushing to main only run the ci

--- a/k8s/values/dev/order-api.yaml
+++ b/k8s/values/dev/order-api.yaml
@@ -1,7 +1,8 @@
 image:
   repository: rontz/order-api
   tag: "v5"
-  pullPolicy: Always
+  digest: ""
+  pullPolicy: IfNotPresent
 
 fullnameOverride: order-api
 
