--- a/k8s/values/dev/payment-service.yaml
+++ b/k8s/values/dev/payment-service.yaml
@@ -1,7 +1,8 @@
 image:
   repository: rontz/payment-service
   tag: "v5"
-  pullPolicy: Always
+  digest: "" 
+  pullPolicy: IfNotPresent
 
 fullnameOverride: payment-service
 
