--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,126 +1,78 @@
-name: CI - Tests + Docker Build & Push
+name: CI
 
 on:
   push:
-    branches: [main, dev]
-  pull_request:
-    branches: [main, dev]
+    branches: [main]
 
 concurrency:
   group: ci-${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
+permissions:
+  contents: read
+
 env:
   DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-  DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
-
-  # We will tag images with the full commit SHA (clear + deterministic)
-  IMAGE_TAG: ${{ github.sha }}
 
 jobs:
-  # -----------------------------
-  # 1) Fast check: Python syntax/compile (or your custom unittest.py)
-  # -----------------------------
-  python_check:
-    name: 1) Python Check (syntax)
+  test:
+    name: Python check
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repository
+      - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Set up Python 3.11
+      - name: Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      - name: Run unittest.py (syntax check)
+      - name: Run unittest.py
         run: python3 ./ci-test/unittest.py
 
-  # -----------------------------
-  # 2) Build & push Docker images (matrix: builds both services)
-  # -----------------------------
-  docker_build_push:
-    name: 2) Build & Push Docker Images
+  docker:
+    name: Build & Push Docker images
     runs-on: ubuntu-latest
-    needs: python_check
+    needs: test
 
     strategy:
       fail-fast: false
       matrix:
-        service:
-          - name: order-api
+        include:
+          - image: order-api
             path: ./app/order-api
-          - name: payment-service
+          - image: payment-service
             path: ./app/payment-service
 
     steps:
-      - name: Checkout repository
+      - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx (for caching and faster builds)
+      - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Log in to Docker Hub
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ env.DOCKERHUB_USERNAME }}
-          password: ${{ env.DOCKERHUB_TOKEN }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # Build and push:
-      # - Always push :<commit-sha>
-      # - Also push :latest only when the workflow runs on main branch
-      - name: Build & push image
+      - name: Generate image tags/labels
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.DOCKERHUB_USERNAME }}/${{ matrix.image }}
+          tags: |
+            type=sha,format=long
+            type=raw,value=latest
+
+      - name: Build & push
         uses: docker/build-push-action@v5
         with:
-          context: ${{ matrix.service.path }}
-          file: ${{ matrix.service.path }}/Dockerfile
+          context: ${{ matrix.path }}
+          file: ${{ matrix.path }}/Dockerfile
           push: true
-
-          tags: |
-            ${{ env.DOCKERHUB_USERNAME }}/${{ matrix.service.name }}:${{ env.IMAGE_TAG }}
-            ${{ env.DOCKERHUB_USERNAME }}/${{ matrix.service.name }}:latest
-
-          # Only push :latest on main (so develop doesn't overwrite latest)
-          # Note: build-push-action doesn't have a built-in "conditional tag",
-          # so we handle this by skipping the entire step for latest via "if"
-          # Alternative below: keep it simple by always pushing both, but that overwrites latest from develop.
-        if: github.ref == 'refs/heads/main'
-
-      # If not on main, push ONLY the SHA tag (no latest overwrite)
-      - name: Build & push image (no latest)
-        uses: docker/build-push-action@v5
-        with:
-          context: ${{ matrix.service.path }}
-          file: ${{ matrix.service.path }}/Dockerfile
-          push: true
-          tags: |
-            ${{ env.DOCKERHUB_USERNAME }}/${{ matrix.service.name }}:${{ env.IMAGE_TAG }}
-          cache-from: type=registry,ref=${{ env.DOCKERHUB_USERNAME }}/${{ matrix.service.name }}:buildcache
-          cache-to: type=registry,ref=${{ env.DOCKERHUB_USERNAME }}/${{ matrix.service.name }}:buildcache,mode=max
-        if: github.ref != 'refs/heads/main'
-
-  # -----------------------------
-  # 3) Final summary (human-friendly output)
-  # -----------------------------
-  summary:
-    name: 3) Summary
-    runs-on: ubuntu-latest
-    needs: docker_build_push
-
-    steps:
-      - name: Print pushed images
-        run: |
-          echo "Build completed and images were pushed to Docker Hub."
-          echo ""
-          echo "Pushed tags (always):"
-          echo "  - ${{ env.DOCKERHUB_USERNAME }}/order-api:${{ env.IMAGE_TAG }}"
-          echo "  - ${{ env.DOCKERHUB_USERNAME }}/payment-service:${{ env.IMAGE_TAG }}"
-          echo ""
-          if [ "${{ github.ref }}" = "refs/heads/main" ]; then
-            echo "Also pushed on main:"
-            echo "  - ${{ env.DOCKERHUB_USERNAME }}/order-api:latest"
-            echo "  - ${{ env.DOCKERHUB_USERNAME }}/payment-service:latest"
-          else
-            echo "Note: :latest was NOT pushed because this is not the main branch."
-          fi
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=registry,ref=${{ env.DOCKERHUB_USERNAME }}/${{ matrix.image }}:buildcache
+          cache-to: type=registry,ref=${{ env.DOCKERHUB_USERNAME }}/${{ matrix.image }}:buildcache,mode=max
