--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,18 +11,16 @@ concurrency:
 permissions:
   contents: read
 
-secrets:
-  DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-
 jobs:
   test:
     name: Python check
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Setup Python
+      - name: Setup Python 3.11
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
@@ -34,6 +32,8 @@ jobs:
     name: Build & Push Docker images
     runs-on: ubuntu-latest
     needs: test
+
+    environment: Secrets
 
     strategy:
       fail-fast: false
