--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -76,3 +76,6 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.image }}:buildcache
           cache-to: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.image }}:buildcache,mode=max
+
+        - name: Print digest
+          run: echo "DIGEST for ${{ matrix.image }} = ${{ steps.build.outputs.digest }}"
